# TwitterClone

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  database.rs  jwt.rs  main.rs  schema.rs
src/handlers/: auth.rs  follows.rs  likes.rs  login.rs  media.rs  mod.rs  register.rs  tweets.rs  users.rs
src/models/: follows.rs  likes.rs  media.rs  mod.rs  tweets.rs  users.rs
src/repositories/: followers.rs  likes.rs  media.rs  mod.rs  tweets.rs  users.rs
src/requests/: mod.rs  tweets.rs  users.rs
src/storage/: mod.rs
