[package]
name = "TwitterClone"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
actix-web = "4.11.0"
dotenv = "0.15.0"
