[package]
name = "TwitterClone"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
actix-web = "4.11.0"
dotenv = "0.15.0"
argon2 = "0.5.3"
rand = "0.8"
jsonwebtoken = "9.3.1"
futures-util = "0.3.31"
mime_guess = "2.0.5"
aws-sdk-s3 = "1.92.0"
aws-config = "1.8.0"
